# affects-calculator

./: .gitignore  Cargo.toml  README.md  hardcoded.txt  rustfmt.toml
affects-calculator/: Cargo.toml
affects-calculator/src/: error.rs  lib.rs
affects-calculator/src/formats/: imc.rs  mod.rs
affects-calculator/src/schema/: action.rs  action_cast_timeline.rs  bnpc_base.rs  companion.rs  emote.rs  enpc_base.rs  equip_slot_category.rs  item.rs  mod.rs  model_chara.rs  npc_equip.rs  provider.rs  simple.rs.example
affects-common/: Cargo.toml
affects-common/src/: container.rs  equip_slot.rs  lib.rs
affects-database-generator/: Cargo.toml
affects-database-generator/src/: cli.rs  main.rs
affects-database-generator/src/analysers/: actions.rs  bnpcs.rs  emotes.rs  enpcs.rs  items.rs  maps.rs  minions.rs  mod.rs  mounts.rs  ornaments.rs
affects-database-generator/src/analysers/imc/: equipment.rs  mod.rs  monsters.rs  weapons.rs
affects-database-generator/src/containers/: bnpcs.rs  database.rs  mod.rs
affects-database-generator/src/formats/: imc.rs
affects-database-generator/src/schema/: action.rs  action_cast_timeline.rs  action_timeline.rs  bnpc_name.rs  emote.rs  enpc_base.rs  equip_slot_category.rs  extractor.rs  item.rs  mod.rs  model_chara.rs  mount.rs  npc_equip.rs  ornament.rs
path-parser/: Cargo.toml
path-parser/src/: error.rs  lib.rs  macros.rs  test.rs
path-parser/src/path/chara/: accessory.rs  character.rs  demihuman.rs  equipment.rs  mod.rs  monster.rs  weapon.rs
path-parser/src/path/common/: font.rs  mod.rs
path-parser/src/path/ui/: icon.rs  map.rs  mod.rs
path-parser/src/types/: file_or_part.rs  mod.rs  model_info.rs  skeleton_slot.rs
src/: cli.rs  macros.rs  main.rs  parser.rs
src/formats/: imc.rs
src/parser/: file_or_part.rs  model_info.rs  path.rs  race_gender.rs  skeleton_slot.rs  test.rs
src/parser/path/chara/: accessory.rs  character.rs  demihuman.rs  equipment.rs  mod.rs  monster.rs  weapon.rs
src/parser/path/common/: font.rs  mod.rs
src/parser/path/ui/: icon.rs  map.rs  mod.rs
src/schema/: action_cast_timeline.rs  bnpc_base.rs  bnpc_name.rs  enpc_base.rs  enpc_resident.rs  equip_slot_category.rs  error.rs  item.rs  map.rs  mod.rs  model_chara.rs  npc_equip.rs  place_name.rs  text_command.rs
