[package]
name = "heliosphere-path-mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4", features = ["derive"] }
ironworks = { git = "https://github.com/ackwell/ironworks", rev = "be80e8433ccc58bcbf19aa9173b6331c1d4ea09e", features = ["excel", "sestring", "sqpack"] }
ironworks_sheets = {git = "https://github.com/ackwell/ironworks", rev = "112a1e55f5570df61ea7f2834f8f54fa5d63b5d9"}
itoa = "1.0.15"
nom = "8.0.0"
thiserror = "2.0.12"

[dev-dependencies]
nom-language = "0.1.0"
nom_locate = "5.0.0"
