[package]
name = "affects-database-generator"
version = "2.0.0"
edition = "2024"

[dependencies]
affects-calculator = { path = "../affects-calculator" }
affects-common = { path = "../affects-common" }
anyhow = "1"
binrw = "0.14"
clap = { version = "4", features = ["derive"] }
ironworks = { git = "https://github.com/ackwell/ironworks", rev = "0885526ee45392761d58787df839262bff63b7a6", features = ["excel", "sestring", "sqpack"] }
path-parser = { path = "../path-parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
ureq = { version = "3", features = ["json"] }
